# LabLFTC

./: CMakeLists.txt  asmCode.asm  atoms.txt  automat.py  compiler  flex_parser.py  hash_table.py  main.py  output.txt  parser.py  parser.sh  temp_atoms.txt  test_program.mpl  y.tab.c
AF_specs/: af_ID.spec  af_const.spec  af_rat.spec  af_test.spec
AF_specs/lab_specs/: af_cpp.txt  af_lab.txt
compilerDir/: asm  compile_code.sh  create_compiler.sh  lex.yy.c  lexer.l  parser.y  programel  y.tab.h
dummy_parser/: automat.py  main.py
error_samples/: cmmdc_cpperr.cpp  suma_err.cpp
flex/: a.out  lex.yy.c  mlpSpec.l  wrong_test.mpl  y.tab.c  y.tab.h
mlp_programs/: cmmdc.cpp  permi_arie.cpp  permi_arie_inline.cpp  suma.cpp  suma_instr.cpp
yacc/: mlpSpec.y
